# uk-flight-punctuality

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  set_up.py
.github/workflows/: gcp-dashboard-run.yml  main.yml  scheduled-gcp-dbt-run.yml  scheduled-gcp-ingest-run.yml
dashboard/: .dockerignore  Dockerfile  app.py  docker-compose.yml  requirements.txt
dbt/: .dockerignore  .user.yml  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  profiles_container.yml
dbt/models/marts/: fct_airport_least_delays_by_year.sql  fct_country_delay_by_year.sql  fct_delay_over_years.sql  fct_delay_vs_month_last_year.sql  fct_recent_airport_delays.sql  fct_recent_number_tracked_flights.sql  fct_recent_published_date.sql
dbt/models/staging/: schema.yml  sources.yml  stg_punctuality_data.sql  stg_punctuality_data_2000.sql
dbt/tests/: test_stg_non_negative_counts.sql  test_stg_percent_bounds.sql
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan  variables.tf
ingest/: .dockerignore  .env  README.md  bigquery_utils.py  config.py  docker-compose.yml  main.py  requirements.txt  run_local.sh  scraper.py  storage.py  utils.py
ingest/tests/: test_utils.py
